# testing-crew-local

my_pro/: README.md  README_LOCAL_LLM.md  pyproject.toml  report.md  requirements.txt  test_local_llm.py
my_pro/src/my_pro/: crew.py  main.py
my_pro/src/my_pro/config/: __init__.py  agents.yaml  llms.yaml
my_pro/src/my_pro/tools/: local_llm.py
